Fix development-shelf wrap

--- a/src/app/modules/development-shelf/development-shelf.component.scss
+++ b/src/app/modules/development-shelf/development-shelf.component.scss
@@ -6,6 +6,11 @@
 
 .app-development-shelf {
 
+  &__app-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   &__units-container {
     margin-right: 2 * $mainsize;
   }
